--- a/index.html
+++ b/index.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper scissors</title>
+
+    <!-- font awesome and google fonts -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Love Maths</title>
 </head>
+
 <body>
-    <header>
-        <h2>Rock, Paper, scissors</h2>        
-    </header>
-    <section class="gamearea">
-        <div>
-            <p>Make a choice:</p>
-            <button aria-label="Rock" data-choice="0" class="control">Rock</button>
-            <button aria-label="Rock" data-choice="0" class="control">Paper</button>
-            <button aria-label="Rock" data-choice="0" class="control">Scissors</button>
+    <h1 class="heading">
+        <img class="logo" src="assets/images/rpslogo3.jpg" alt="logo"> Rock Paper Scissors
+    </h1>
+    <div class="game-area">
+        <img src="assets/images/RPS_Rules3.png">
+    </div>
+    <div class="game-area">
+        <div class="controls-area">
+            <button data-type="rock">
+                <img src="assets/images/0. Rock.png"/>
+                <!-- <i class="fas fa-plus"></i> -->
+            </button>
+            <button data-type="paper">
+                <img src="assets/images/1. paper.png"/>
+                <!-- <i class="fas fa-minus"></i> -->
+            </button>
+            <button data-type="scissors">
+                <img src="assets/images/2. Scissors.png"/>
+                <!-- <i class="fas fa-times"></i> -->
+            </button>
+            <span></span>
+            <button data-type="division" class="btn btn--big btn--red">
+                <!-- <i class="fas fa-divide"></i> -->
+            </button>
         </div>
-        |<div id="messages"></div>
-        <div class="player">
-            <h3 class="scores">Your score: <span id="player-score">0</span></h3>
-            <img>
-        </div>
-        <div class="computer">
-            <h3 class="scores">Computer score: <span id="computer-score">0</span></h3>
-            <img>
-        </div>
-    </section>
-    <footer>
-        <h3>Rules</h3>
-        <p>Scissors cut Paper ¦ Paper covers Rock ¦ Rock Blunts Scissors</p>
-    </footer>
+    </div>
+
+    <div class="score-area">
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+    </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
