--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
     <!-- <h1 class="heading">
         <img class="logo" src="assets/images/rpslogo3.jpg" alt="logo"> Rock Paper Scissors
     </h1> -->
-    <section class="gamearea">
+    <section class="game-area">
         <div>
-            <p>Player - Please make your choice ... choose Rock, Paper or Scissors below</p>
-            <button aria-label="Rock" data-choice="0" class="control"><img src="assets/images/rock.png"/></button> 
-            <button aria-label="Rock" data-choice="1" class="control"><img src="assets/images/paper.png"/></button> 
-            <button aria-label="Rock" data-choice="2" class="control"><img src="assets/images/scissors.png"/></button> 
-            <!-- <button aria-label="Rock" data-choice="1" class="control">Paper</button>
-            <button aria-label="Rock" data-choice="2" class="control">Scissors</button> -->
+            <p>Player, please make your choice ... choose Rock, Paper or Scissors below:</p>
+            <button aria-label="Rock" data-choice="0" class="control"><img id="image" src="assets/images/rock.png"/></button> 
+            <button aria-label="Rock" data-choice="1" class="control"><img id="image" src="assets/images/paper.png"/></button> 
+            <button aria-label="Rock" data-choice="2" class="control"><img id="image" src="assets/images/scissors.png"/></button> 
         </div>
         <div id="messages"></div>
         <div class="player">
